--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             </li>
             <li class="nav-item">
               <a href="#contact-section" class="nav-link"
-                ><span>Contact</span></a
+                ><span >Contact</span></a
               >
             </li>
           </ul>
@@ -180,9 +180,7 @@
                 <h2 class="mb-4">About Me</h2>
                 <p>
                   Currently pursuing my pre-final year of B.Tech from the IT
-                  department at Guru Ghasidas Vishwavidhyalaya, I am an aspiring
-                  Ethical Hacker. I am a fast learner who is always inquisitive
-                  to learn new technologies. I have earned a Complete Ethical Hacking certificate from IITKGP. I am also a 5-Star Java coder at Hackerrank. I am also a cynophilist.
+                  department at Guru Ghasidas Vishwavidhyalaya, I am an aspiring Ethical Hacker. Always inquisitive to learn new technologies, I feel most passion for Cyber Security but I also practise web development, android development and competitive programming. I have earned a Complete Ethical Hacking certificate from IIT Kharagpur. For practising penetration testing, I use 'Hack the Box' and 'Try to Hack Me' I am also a 5-Star Java coder at Hackerrank. Except for Windows, Kali Linux and Parrot OS are also well known by me.
                 </p>
                 <ul class="about-info mt-4 px-md-0 px-2">
                   <li class="d-flex">
@@ -231,22 +229,23 @@
 	<div class="col-md-12 heading-section text-center ftco-animate">
 		<h1 class="big big-2">RESUME</h1>
 		<h2 class="mb-4">RESUME</h2>
+    <br>
 	  </div>
 	
 			<ul class="myul" type="none" style="color: #fff !important;">
 			  <li class="nav-item">
-				<a href="#domains-section" class="nav-link"><span>Domains</span></a>
+				<a href="#domains-section" class="nav-link" style="color: white;"><span>Domains</span></a>
 			  </li>
 			  <li class="nav-item">
-				<a href="#skills-section" class="nav-link"><span>Skills</span></a>
+				<a href="#skills-section" class="nav-link" style="color: white;"><span>Skills</span></a>
 			  </li>
 			  <li class="nav-item">
-				<a href="#profile-section" class="nav-link"
+				<a href="#profile-section" class="nav-link" style="color: white;"
 				  ><span>Profile</span></a
 				>
 			  </li>
 			  <li class="nav-item">
-				<a href="#projects-section" class="nav-link"><span>Projects </span></a>
+				<a href="#projects-section" class="nav-link" style="color: white;"><span>Projects </span></a>
 			  </li>
 			</ul>
 		  
@@ -267,7 +266,7 @@
         </div>
         <div class="row">
           <div class="col-md-4 text-center d-flex ftco-animate">
-            <a href="#" class="services-1">
+            <a class="services-1">
               <span class="icon">
                 <img
                   src="./images/webdev.png"
@@ -282,7 +281,7 @@
             </a>
           </div>
           <div class="col-md-4 text-center d-flex ftco-animate">
-            <a href="#" class="services-1">
+            <a  class="services-1">
               <span class="icon">
                 <img
                   src="./images/android.png"
@@ -297,7 +296,7 @@
             </a>
           </div>
           <div class="col-md-4 text-center d-flex ftco-animate">
-            <a href="#" class="services-1">
+            <a class="services-1">
               <span class="icon">
                 <img
                   src="./images/hacker.png"
@@ -313,7 +312,7 @@
           </div>
 
           <div class="col-md-4 text-center d-flex ftco-animate">
-            <a href="#" class="services-1">
+            <a class="services-1">
               <span class="icon">
                 <img
                   src="./images/java.png"
@@ -329,7 +328,7 @@
           </div>
 
           <div class="col-md-4 text-center d-flex ftco-animate">
-            <a href="#" class="services-1">
+            <a class="services-1">
               <span class="icon">
                 <img
                   src="./images/cybersecurity.png"
@@ -413,25 +412,41 @@
           </div>
           <div class="col-md-6 animate-box">
             <div class="progress-wrap ftco-animate">
-              <h3>Java</h3>
+              <h3>CSS3</h3>
               <div class="progress">
                 <div
                   class="progress-bar color-2"
                   role="progressbar"
-                  aria-valuenow="80"
+                  aria-valuenow="90"
                   aria-valuemin="0"
                   aria-valuemax="100"
-                  style="width: 80%"
+                  style="width: 90%"
                 >
-                  <span>80%</span>
+                  <span>90%</span>
                 </div>
               </div>
             </div>
           </div>
-
           <div class="col-md-6 animate-box">
             <div class="progress-wrap ftco-animate">
-              <h3>Android Studio</h3>
+              <h3>Cyber Security</h3>
+              <div class="progress">
+                <div
+                  class="progress-bar color-6"
+                  role="progressbar"
+                  aria-valuenow="75"
+                  aria-valuemin="0"
+                  aria-valuemax="100"
+                  style="width: 75%"
+                >
+                  <span>75%</span>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 animate-box">
+            <div class="progress-wrap ftco-animate">
+              <h3>Java</h3>
               <div class="progress">
                 <div
                   class="progress-bar color-1"
@@ -446,7 +461,23 @@
               </div>
             </div>
           </div>
-
+          <div class="col-md-6 animate-box">
+            <div class="progress-wrap ftco-animate">
+              <h3>Ethical Hacking</h3>
+              <div class="progress">
+                <div
+                  class="progress-bar color-6"
+                  role="progressbar"
+                  aria-valuenow="70"
+                  aria-valuemin="0"
+                  aria-valuemax="100"
+                  style="width: 70%"
+                >
+                  <span>70%</span>
+                </div>
+              </div>
+            </div>
+          </div>
           <div class="col-md-6 animate-box">
             <div class="progress-wrap ftco-animate">
               <h3>Python</h3>
@@ -467,17 +498,17 @@
 
           <div class="col-md-6 animate-box">
             <div class="progress-wrap ftco-animate">
-              <h3>CSS3</h3>
+              <h3>Android Studio</h3>
               <div class="progress">
                 <div
                   class="progress-bar color-4"
                   role="progressbar"
-                  aria-valuenow="90"
+                  aria-valuenow="80"
                   aria-valuemin="0"
                   aria-valuemax="100"
-                  style="width: 90%"
+                  style="width: 80%"
                 >
-                  <span>90%</span>
+                  <span>80%</span>
                 </div>
               </div>
             </div>
@@ -500,6 +531,7 @@
               </div>
             </div>
           </div>
+          
         </div>
       </div>
     </section>
@@ -508,7 +540,7 @@
       <div class="container">
         <div class="row justify-content-center pb-5">
           <div class="col-md-10 heading-section text-center ftco-animate">
-            <h2 class="mb-4">Experience   &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;   Education</h2>
+            <h2 class="mb-4">Experience     &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; & &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  Education</h2>
           </div>
         </div>
         <div class="row">
@@ -543,6 +575,14 @@
 				  experience in GDSC was totally amazing.
 				</p>
 			  </div>
+			<!-- <div class="resume-wrap ftco-animate">
+				<span class="date">Placement Cell IT Department - GGV </span>
+				<h2>Co-ordinator</h2>
+				<span class="position">July,2022-PRESENT</span>
+				<p class="mt-4">
+				  Placement Cell requires me to contact HR's of different companies and requesting them to recruit students from my college. This role has developed my communication skills a lot.
+				</p>
+			  </div> -->
           </div>
 
           <div class="col-md-6">
