--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           <div class="row d-md-flex no-gutters slider-text align-items-end justify-content-end"
             data-scrollax-parent="true">
             <div class="one-third js-fullheight order-md-last img"
-              style="background-image: url(./images/Dushyant1.jpeg)">
+              style="background-image: url(./images/dushyant_brightened-Photoroom.png)">
               <div class="overlay"></div>
             </div>
             <div class="one-forth d-flex align-items-center ftco-animate"
@@ -99,7 +99,7 @@
           <div class="row d-flex no-gutters slider-text align-items-end justify-content-end"
             data-scrollax-parent="true">
             <div class="one-third js-fullheight order-md-last img"
-              style="background-image: url(./images/Dushyant2.jpeg)">
+              style="background-image: url(./images/ dushyant12_cropped-Photoroom.png)"> 
               <div class="overlay"></div>
             </div>
             <div class="one-forth d-flex align-items-center ftco-animate"
@@ -128,7 +128,7 @@
           <div class="img-about img d-flex align-items-stretch">
             <div class="overlay"></div>
             <div class="img d-flex align-self-stretch align-items-center"
-              style="background-image: url(./images/Dushyant2.jpeg)"></div>
+              style="background-image: url(./images/dushyant2_cropped-Photoroom.png)"></div>   
           </div>
         </div>
         <div class="col-md-6 col-lg-7 pl-lg-5 pb-5">
@@ -853,7 +853,7 @@
         </div> -->
 
         <div class="col-md-6 d-flex">
-          <div class="img" style="background-image: url(./images/dushyant3.jpeg)"></div>
+          <div class="img" style="background-image: url(./images/dushyant3_cropped-Photoroom.png)"></div>
         </div>
       </div>
     </div>
