--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
           <div class="row d-flex no-gutters slider-text align-items-end justify-content-end"
             data-scrollax-parent="true">
             <div class="one-third js-fullheight order-md-last img"
-              style="background-image: url(./images/ dushyant12_cropped-Photoroom.png)"> 
+              style="background-image: url(./images/dushyant12_cropped-Photoroom.png)"> 
               <div class="overlay"></div>
             </div>
             <div class="one-forth d-flex align-items-center ftco-animate"
@@ -165,7 +165,7 @@
                 <span>Project complete</span>
               </p>
               <p>
-                <a href="./Resume-Dushyant-Parashar.pdf" class="btn btn-primary py-3 px-3" download="">Download Resume</a>
+                <a href="./Resume-Dushyant-Parashar_updated.pdf" class="btn btn-primary py-3 px-3" download="">Download Resume</a>
               </p>
             </div>
           </div>
@@ -594,7 +594,7 @@
         <div class="row justify-content-center mt-5">
           <div class="col-md-6 text-center ftco-animate">
             <p>
-              <a href="./Resume-Dushyant-Parashar.pdf" class="btn btn-primary py-4 px-5" download="">Download Resume</a>
+              <a href="./Resume-Dushyant-Parashar_updated.pdf" class="btn btn-primary py-4 px-5" download="">Download Resume</a>
             </p>
           </div>
         </div>
